--- a/src/assets/styles/layout/base.scss
+++ b/src/assets/styles/layout/base.scss
@@ -1,6 +1,4 @@
 
-@import "../../local_modules/normalize.css/normalize";
-
 *,
 *::before,
 *::after {
@@ -9,7 +7,8 @@
 
 html {
   box-sizing: border-box;
-  font-size: 18px;
+	font-size: 18px;
+	height: 100%;
 
   @include tablets {
     font-size: 16px;
@@ -21,7 +20,8 @@ html {
 }
 
 body {
-  margin: 0;
+	margin: 0;
+	height: 100%;
 }
 
 img {
