--- a/src/assets/styles/utils/variables.scss
+++ b/src/assets/styles/utils/variables.scss
@@ -1,7 +1,9 @@
-// Mobile first
+// Mobile
 $mediaWidthMobileMini: 320px;
-$mediaWidthMobile: 480px;
+$mediaWidthMobile: 520px;
 $mediaWidthTablet: 768px;
 $mediaWidthTabletHorizontal: 1024px;
 $mediaWidthdesktop: 1200px;
 $mediaWidthdesktopHd: 1800px;
+// texts
+$text: "";
