fix pug mixin error

--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -16,8 +16,8 @@ block content
         li.items__t
         li.items__t
         li.items__t
-      +imagePng("content/exmpl", "griffin", "griffin bird")
-      +imageJpg("content/exmpl1", "griffin", "griffin bird")
+      +image("content/exmpl", "png", "griffin", "griffin bird")
+      +image("content/exmpl1", "jpg", "griffin", "griffin bird")
       //- и другие блоки
       a(href="https://api.whatsapp.com/send?phone=+79630003282&text=Hello") Написать в WhatsApp
 
